fix(card): border color for dark mode

--- a/projects/cue-ui/src/theme/card.scss
+++ b/projects/cue-ui/src/theme/card.scss
@@ -9,6 +9,7 @@
 
 body.dark {
   --cue-card-box-shadow: 0 1px calc(24em / 16) rgba(255, 255, 255, 0.3);
+  --cue-card-border-color: var(--cue-border-color);
 }
 
 @container cue-container (width < 20em) {
